# wyoming-parakeet-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
scripts/: com.github.wyoming-parakeet-mlx.plist  probe.py  run.sh
tests/: conftest.py  test_e2e.py  test_handler.py
wyoming_parakeet_mlx/: __init__.py  __main__.py  const.py  handler.py  model.py
