[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming-parakeet-mlx"
version = "0.1.0"
description = "Wyoming protocol server for NVIDIA Parakeet via parakeet-mlx (Apple Silicon)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Raphael Mitas" }]
keywords = ["wyoming", "parakeet", "stt", "asr", "mlx", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "wyoming>=1.6.0",
    # parakeet-mlx requires mlx, which only has wheels for macOS arm64.
    # Marking it conditional keeps `pip install` working on Linux CI for
    # lint + fake-model unit tests; runtime use on macOS pulls it in.
    "parakeet-mlx>=0.5.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
wyoming-parakeet-mlx = "wyoming_parakeet_mlx.__main__:run"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/raphaelmitas/wyoming-parakeet-mlx"
Issues = "https://github.com/raphaelmitas/wyoming-parakeet-mlx/issues"

[tool.setuptools.packages.find]
include = ["wyoming_parakeet_mlx*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "requires_mlx: test requires parakeet-mlx (Apple Silicon only)",
]
testpaths = ["tests"]
